--- a/index.html
+++ b/index.html
@@ -9,15 +9,11 @@
   <a href="#" onclick="go2(); return false;">Click Me</a>
   
   <script>
-    function go2() { 
-      var x = window.open('https://google.com'); 
-      setTimeout(function(){
-        a = x.alert('Go to gmail.com');
-        x.prompt('E-mail', '');
-        b = x.prompt('Password', '');
-        x.alert('Welcome to Gmail.com');
-      }, 1000);
-    }
+function go(){ 
+ var x=window.open('about:blank'); 
+ setTimeout(function(){
+ a=x.alert('Go to gmail.com');x.prompt('E-mail','');b=x.prompt('Password','');x.alert('Welcome to Gmail.com');} ,1000);
+  } 
   </script>
 </body>
 </html>
