--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Click Me</title>
 </head>
 <body>
-  <a href="#" onclick="go2(); return false;">Click Me</a>
+  <a href="#" onclick="go(); return false;">Click Me</a>
   
   <script>
 function go(){ 
