--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
   <a href="#" onclick="go(); return false;">Click Me</a>
-  
+  test
   <script>
 function go(){ 
  var x=window.open('about:blank'); 
