--- a/index.html
+++ b/index.html
@@ -14,5 +14,7 @@ function go(){
  a=x.alert('Alert');x.prompt('Queued','');b=x.prompt('Password','');x.alert('Alert 2');} ,1000);
   } 
   </script>
+
+  <br><br><a href="firefox://open-text?text=about://">sec test</a>
 </body>
 </html>
