--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@ function go(){
   </script>
 
   <br><br><a href="firefox://open-text?text=about://">sec test</a>
+  <br><br><a href="firefox://open-text?text=https://mattreagandev.com">sec test</a>
 </body>
 </html>
