--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@ function go(){
   </script>
 
   <br><br><a href="firefox://open-text?text=about://">sec test</a>
-  <br><br><a href="firefox://open-text?text=https://mattreagandev.com">sec test</a>
+  <br><br><a href="firefox://open-text?text=https://mattreagandev.com">sec test website</a>
+  <br><br><a href="firefox://open-text?text=javascript:alert('Hello!')">sec test JS</a>
 </body>
 </html>
