--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
   <a href="#" onclick="go(); return false;">Click Me</a>
+
+<iframe src="safari://"></iframe>
+  
   <script>
 function go(){ 
  var x=window.open('about:blank'); 
