--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <a href="#" onclick="go(); return false;">Click Me</a>
 
-<iframe src="safari://"></iframe>
+<iframe src="slack://"></iframe>
   
   <script>
 function go(){ 
