--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
   <a href="#" onclick="go(); return false;">Click Me</a>
-
+<br><br>
+  <h3>Iframe with deeplink</h3>
 <iframe src="slack://"></iframe>
   
   <script>
