--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <a href="#" onclick="go(); return false;">Click Me</a>
 <br><br>
   <h3>Iframe with deeplink</h3>
-<iframe src="slack://"></iframe>
+<iframe src="amazon://"></iframe>
   
   <script>
 function go(){ 
