--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <a href="#" onclick="go(); return false;">Click Me</a>
 <br><br>
-  <h3>Iframe with deeplink</h3>
+  <h3>Iframe with Amazon deeplink</h3>
 <iframe src="amazon://"></iframe>
   
   <script>
