--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body>
   <a href="#" onclick="go(); return false;">Click Me</a>
 <br><br>
-  <h3>Iframe with Discord deeplink</h3>
-<iframe src="discord://"></iframe>
+  <h3>Iframe with Slack deeplink</h3>
+<iframe src="slack://"></iframe>
   
   <script>
 function go(){ 
