--- a/index.html
+++ b/index.html
@@ -1,26 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Click Me</title>
-</head>
+<html>
+<head></head>
 <body>
-  <a href="#" onclick="go(); return false;">Click Me</a>
-<br><br>
-  <h3>Iframe with Slack deeplink</h3>
 <iframe src="slack://"></iframe>
-  
-  <script>
-function go(){ 
- var x=window.open('about:blank'); 
- setTimeout(function(){
- a=x.alert('Alert');x.prompt('Queued','');b=x.prompt('Password','');x.alert('Alert 2');} ,1000);
-  } 
-  </script>
-
-  <br><br><a href="firefox://open-text?text=about://">sec test</a>
-  <br><br><a href="firefox://open-text?text=https://mattreagandev.com">sec test website</a>
-  <br><br><a href="firefox://open-text?text=javascript:alert('Hello!')">sec test JS</a>
 </body>
 </html>
