--- a/index.html
+++ b/index.html
@@ -1,6 +1,3 @@
-<html>
-<head></head>
-<body>
-<iframe src="slack://"></iframe>
-</body>
-</html>
+<script>
+top.location.href="shortcuts://run-shortcut?name=non-existent&x-error=discord://"
+</script>
