--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
-<script>
-top.location.href="shortcuts://run-shortcut?name=non-existent&x-error=discord://"
-</script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title></title>
+</head>
+<body>
+  Test 1
+  <script>
+    top.location.href="shortcuts://run-shortcut?name=non-existent&x-error=discord://"
+  </script>
+</body>
+</html>
