--- a/index.html
+++ b/index.html
@@ -1,13 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title></title>
-</head>
-<body>
-  Test 1
+<html>
+  <head></head>
+  <body>Discord 2</body>
   <script>
-    top.location.href="shortcuts://run-shortcut?name=non-existent&x-error=discord://"
+    top.location.href="discord://"
   </script>
-</body>
 </html>
